8207954: Data for --release 11
Adding support for --release 11

Reviewed-by: erikj, ihse, jjg